# openvisuspy

./: .gitignore  Dockerfile  MANIFEST.in  README-chess-v0.1.md  README.developers.md  README.md  README.python-backend.md  ReadMe.md  TODO.md  config.json  convert.py  dashboards.json  diagram.drawio  docker-compose.yml  jupyter-lite.ipynb  nginx.conf  openvisus.env  pyproject.toml  requirements.txt  setup.py
ansible/: 00-setup.yml  03-precache-data.yml  04-run.yml  README.md  ansible.cfg  docker-compose.yml  nginx.conf  playbook-deploy-node.yml  playbook-precache-data.yml  playbook-remove-containers.yml  playbook-setup-node.yml  precache.yml  run.yml
app/: main.py  sync_link.py
app_magicscan/: app_hooks.py  configurable_boundary_loss.py  dataset_augmentation.py  environment.yml  image_tiling_utility.py  inference_pipeline.py  main.py  predict_on_test_images.py  requirements.txt  ridge_graph.py  run_preprocess.ipynb  run_preprocess_new.ipynb  run_unet.py  slice_dl.py  sync_link.py  unet_implementation.py  unet_pp_implementation.py  utils.py
catalogs/: default.config
deploy/: ReadMe.md  ansible.cfg  benchmark.yml  docker-compose.yml  nginx.conf  precache.yml  run.yml  setup.yml
docs/: create_streamable.drawio
json/: dashboards.chess.json  dashboards.debug.json  dashboards.json  nasa.json
notebooks/: 00-bokeh-openvisus.ipynb  01-bokeh-retina-rabbit-6tb.ipynb  02-panel-digital-rocks-portal.ipynb  03-panel-brookheaven.ipynb  04-panel-chess-recon_combined_1_fullres_zip.ipynb  06-bokeh-chess-recon_combined_1_fullres.ipynb  07-bokeh-chess-recon_combined_1_2_3_fullres.ipynb  08-matplot-retina-rabbit-6tb.ipynb  09-vr-itkwidgets.ipynb  09-vr-pyvista.ipynb  09-vr-vtkvolume.ipynb  10-bokeh-nasa-200tb.ipynb  10-bokeh-nasa.ipynb  11-panel-openvisus.ipynb  13-bokeh-nasa-bellows.ipynb  99-panel-openvisus (broken).ipynb  catalog.ipynb  convert-hdf5-data.ipynb  convert-in-memory.ipynb  convert-nexus-data.ipynb  convert-numpy-data.ipynb  convert-streamable.ipynb  convert-tiff-data.ipynb  create_streamable.ipynb  ov-dashboards.ipynb  ov-retina-rabbit-matplot.ipynb  ov-signal.ipynb  ov-vr.ipynb  test-bokeh.ipynb  test-ipywidgets.ipynb  test-matplotlib.ipynb  test-panel.ipynb  (+1 more)
(+238 files in other folders)
