[project]
name = "openvisuspy"
version = "1.0.63"
authors = [{ name="OpenVisus developers"},]
description = "openvisuspy"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/sci-visus/openvisuspy"
"Bug Tracker" = "https://github.com/sci-visus/openvisuspy"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
include = ["json", "src", 'notebooks', 'app', 'test', "doc" ]

[tool.hatch.build.targets.wheel.sources]
"src/openvisuspy" = "openvisuspy"
"notebooks" = "openvisuspy/notebooks"
"app" = "openvisuspy/app" 
"test" = "openvisuspy/test" 
"json" = "openvisuspy/json" 

#[tool.hatch.build.targets.wheel.force-include]
"./LICENSE" = "openvisuspy/LICENSE"